Fix: revert grid gutter spacing

--- a/components/Layout/Grid/Grid.module.scss
+++ b/components/Layout/Grid/Grid.module.scss
@@ -1,5 +1,5 @@
 .grid {
-  --gutter: #{$container-padding-x / 2};
+  --gutter: #{$container-padding-x};
 
   @include push-auto-x();
   padding-left: var(--gutter);
